
Version 0.7-10 (??-05-2012, Rev. 1???)
=====================================

- 

Version 0.7-9 (07-05-2012, Rev. 1277)
=====================================

- calcPower gained a parameter "cr" for specifying
  a correlation for parametric power simulations. 

- Added option to allow non-alpha-exhaustive parametric tests .

- Improved dialog in GUI for power simulations, 
  including multiple settings for power analysis.

- Improved font size adjustment for edge labels.

- Show syntax error instead of infinite loop if an unparseable edge weight is entered. 

 33 files changed, 720 insertions(+), 190 deletions(-)
 

Version 0.7-8 (06-03-2012, Rev. 1252)
=====================================

- Edges can be created by drag'n'drop. 
  (Drag from the first node and drop on the second node.)
  
- Button to add edges stays pressed down until it is pressed again (or edges are added).
  This allows faster creation of graphs with many nodes.

- Fixed (unproblematic but annoying) NullPointerException with drag'n'drop
  introduced in 0.7-7.

- Fixed an error window popping up (but nothing was wrong at all) in the
  rare case that while dragging an edge it was double clicked and deleted.
  
- If edge weights are NULL, the weightStr is set to "NULL" instead of 
  throwing a RuntimeException.
  
- Fixed: Check for negative eigen values always resulted in the message
  that the matrix can not be processed due to NA values.

 14 files changed, 136 insertions(+), 45 deletions(-)
 

Version 0.7-7 (17-02-2012, Rev. 1236)
=====================================

- Fixed severe (but at least obvious) regression in 0.7-6: All p-values beyond the
  first one were always immediately set to 0.

- Simes test calculates also pvalues. An extra option adjPValues=TRUE is added to
  the gMCP function. Setting this to FALSE will sometimes increase the speed 
  (and memory consumption) of the Simes test significantly.

- New wizard for the creation of correlation matrices.
  